[gd_scene load_steps=10 format=2]

[ext_resource path="res://catchebles/big_fish/big_fish.png" type="Texture" id=1]
[ext_resource path="res://catchebles/big_fish/BigFish.gd" type="Script" id=2]
[ext_resource path="res://catchebles/big_fish/BigFishKinematic.gd" type="Script" id=3]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BigFish/BigFish/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "calm" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BigFish/BigFish:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.535887 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BigFish/BigFish:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "devour"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("BigFish/BigFish/AnimatedSprite:animation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "calm", "aggressive", "calm" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BigFish/BigFish:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 5 ),
"transitions": PoolRealArray( 0.535887, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -300 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BigFish/BigFish:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.1, 0 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 180.0 ]
}

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 193, 467, 193 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 467, 193 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "aggressive",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "calm",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 65.1366
height = 329.679

[node name="BigFish" type="Node2D" groups=["egg_hunters"]]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
anims/RESET = SubResource( 6 )
anims/devour = SubResource( 7 )

[node name="BigFish" type="KinematicBody2D" parent="."]
rotation = 3.14159
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="BigFish"]
rotation = -1.5708
frames = SubResource( 2 )
animation = "calm"

[node name="CollisionShape2D" type="CollisionShape2D" parent="BigFish"]
rotation = 3.14159
shape = SubResource( 5 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="hooked" from="BigFish" to="." method="get_hooked"]
